# StandardsValidator

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  WARNINGS.md  build.rs  extendedvalidator.js  names.js  oobfixer.js  ownership.js  package-lock.json  package.json  validator.js
.github/workflows/: release.yaml
crates/codegen/: Cargo.toml
crates/codegen/data/: bodyparts.json  broken.json  deprecated.toml  mwscript.returning.txt  projects.json  services.json  spells.json  supplies.json  (+1 more)
data/: bodyparts.json  broken.json  classes.json  ignore.json  khajiit.mwscript  projects.json  services.json  spells.json  supplies.json  travel.json  uniques.txt
lib/: autocalc.js  books.js  cells.js  classes.js  corpse.js  dialogue.js  doors.js  duplicates.js  ids.js  keys.js  levelled.js  magic.js  markers.js  missing.js  names.js  npc.js  npcscripts.js  orphans.js  ownership.js  persistent.js  scripts.js  services.js  soundgen.js  supplies.js  todo.js  travel.js  unicode.js  uniques.js  util.js
lib/extended/: cells.js  items.js  ownership.js  program.js  weapons.js
src/: context.rs  extended.rs  handler_traits.rs  handlers.rs  ltex.rs  main.rs  oob.rs  util.rs  validators.rs
src/extended/: cells.rs  deprecated.rs  equipment.rs  items.rs  names.rs  weapons.rs
src/validators/: autocalc.rs  books.rs  cells.rs  classes.rs  corpse.rs  dialogue.rs  doors.rs  duplicates.rs  ids.rs  keys.rs  leveled.rs  lights.rs  magic.rs  missing.rs  npc.rs  orphans.rs  persistent.rs  scripts.rs  services.rs  soundgens.rs  supplies.rs  test.rs  todo.rs  travel.rs  unicode.rs  uniques.rs
(+12 files in other folders)
