[package]
name = "StandardsValidator"
version = "2.0.1"
edition = "2021"

[dependencies]
clap = "^4.5"
levenshtein = "1.0.5"
rayon = "1.10.0"
regex = "^1.10"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
default-features = false
features = ["esp"]

[build_dependencies]
serde_json = "^1.0"
regex = "^1.10"

[build_dependencies.serde]
version = "^1.0"
features = ["derive"]