[package]
name = "StandardsValidator"
version = "2.5.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5", features = ["cargo"] }
levenshtein = "1.0.5"
rayon = "1.10.0"
regex = "^1.10"
mimalloc = { version = "^0.1", default-features = false }
toml = "0.8.13"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "dev"
default-features = false
# features = ["esp", "nightly", "simd"]
features = ["esp"]

[dependencies.codegen]
path = "./crates/codegen"
